--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
-    "vary": "^1.1.2"
+    "vary": "^1.1.2",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "node ./"
